# linx-os-sdk

./: .gitignore  README.md  linxos.py
board/awol/common/audio/: audio_v812.c  audio_v812.h
board/awol/common/audio/v812/: play_ao.c  play_ao.h  record_ai.c  record_ai.h
board/mac/: CMakeLists.txt
board/mac/common/audio/: portaudio_mac.c  portaudio_mac.h
board/mac/common/camera/: camera_mac.c  camera_mac.h
demo/mac/: CMakeLists.txt  README.md  linx_demo.c
examples/mac/: CMakeLists.txt  linx_demo.c
sdk/: CMakeLists.txt  download.sh  linx_sdk.c  linx_sdk.h  run.sh
sdk/audio/: CMakeLists.txt  README.md  audio_interface.c  audio_interface.h  audio_stub.c  audio_stub.h  portaudio_mac.c  portaudio_mac.h
sdk/audio/test/: Makefile  audio_test.c  audio_test_portaudio.c
sdk/camera/: CMakeLists.txt  README.md  camera_interface.c  camera_interface.h  camera_stub.c  camera_stub.h
sdk/camera/test/: CMakeLists.txt  camera_mac_explain.c  camera_mac_explain_gui.c  camera_test.c
sdk/cjson/: CMakeLists.txt
sdk/cmake/: FindMongoose.cmake  FindOpus.cmake  PlatformDetection.cmake
sdk/cmake/patch/mongoose/: CMakeLists.txt  mongooseConfig.cmake.in  mongoose_config.h
sdk/cmake/templates/: PackageConfig.cmake.in  linx_sdk.pc.in
sdk/cmake/toolchains/: riscv32-linux-musl.cmake
sdk/codecs/: CMakeLists.txt  README.md  audio_codec.c  audio_codec.h  codec_stub.c  codec_stub.h  opus_codec.c  opus_codec.h
sdk/codecs/test/: CMakeLists.txt  codec_test.c
sdk/log/: CMakeLists.txt  linx_log.c  linx_log.h
sdk/mcp/: CMakeLists.txt  mcp.h  mcp_property.c  mcp_property.h  mcp_server.c  mcp_server.h  mcp_tool.c  mcp_tool.h  mcp_types.h  mcp_utils.c  mcp_utils.h
sdk/mcp/test/: Makefile  README.md  run_tests.sh  test_framework.c  test_framework.h  test_integration.c  test_property.c  test_server.c  test_tool.c  test_types.c  test_utils.c
sdk/mcp/test/examples/: calculator_server.c  file_manager_server.c  weather_server.c
sdk/ota/: CMakeLists.txt  linx_ota.c  linx_ota.h
sdk/ota/test/: CMakeLists.txt  ota_test.c
sdk/play/: CMakeLists.txt  linx_player.c  linx_player.h
sdk/play/test/: CMakeLists.txt  play_audio_test.c
sdk/protocols/: CMakeLists.txt  linx_protocol.c  linx_protocol.h  linx_websocket.c  linx_websocket.h
sdk/protocols/test/: Makefile  audio.opus  example_linx_websocket.c
sdk/third/liblvgl/: CMakeLists.txt
sdk/third/liblvgl/v9/: CMakeLists.txt
sdk/third/liblvgl/v9/conf/: lv_conf.h
sdk/third/liblvgl/v9/lvgl/demos/benchmark/: lv_demo_benchmark.c
sdk/third/liblvgl/v9/lvgl/src/draw/sw/: lv_draw_sw.c
sdk/third/liblvgl/v9/lvgl/src/indev/: lv_indev.c
sdk/third/liblvgl/v9/lvgl/src/osal/: lv_freertos.c  lv_freertos.h
sdk/third/liblvgl/v9/lvgl/src/stdlib/: lv_mem.c
sdk/third/liblvgl/v9/lvgl/src/widgets/animimage/: lv_animimage.c  lv_animimage.h
sdk/third/liblvgl/v9/port/: lv_vendor.c
